public/stylus/_full-error.styl
.full-error {
    background-color: $grain-bg-color;
    bottom: 0;
    grain();
    left: 0;
    max-width: 100%;
    padding: 0 10px;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 10;

    h1 {
        border-bottom: 1px solid $border-gray;
        font-size: 18px;
        font-weight: 400;
        line-height: 26px;
        padding: 0 15px 5px;
        box-sizing: padding-box;
        margin: 0 -15px;
    }

    .error {
        color: $full-error-text-color;
        font-size: 16px;
        line-height: 24px;

        // Make vertically centered.
        display-flex();
        align-items(center);

        .msg {
            flex(1);
        }

        a {
            color: $full-error-text-color;
        }

        p {
            font-size: 22px;
            font-weight: 100;
            margin: 15px 0 0;
            line-height: 30px;

            &:last-child {
                margin-bottom: 10px;
            }
        }

        .error-code {
            color: $dark-gray;
            text-shadow: 0 1px 0 $medium-gray;
        }
    }

    .buttons {
        background: none;
        border-top: none;
        margin: 10px -15px -10px;
        padding: 10px 0;
    }

}


@media $small-min-width {
    .full-error {

        &.page {
            overflow: auto;
        }

        h1 {
            font-size: 30px;
            margin: 0;
            padding: 0 0 15px;
        }

        .error {
            position: static;
        }

        .msg {
            min-height: 0;
        }

        .buttons {
            margin: 10px -15px -10px;
        }
    }
}

